idlgenerator/yacc/y.output

state 0
	$accept: .specification $end 
	event_dcl: .    (373)

	Annotation  shift 66
	RWabstract  shift 58
	RWbitmask  shift 73
	RWbitset  shift 72
	RWcomponent  shift 60
	RWconnector  shift 65
	RWconst  shift 22
	RWcustom  shift 76
	RWexception  shift 26
	RWenum  shift 71
	RWeventtype  shift 63
	RWhome  shift 61
	RWimport  shift 35
	RWinterface  shift 74
	RWlocal  shift 75
	RWmodule  shift 21
	RWnative  shift 51
	RWporttype  shift 64
	RWstruct  shift 77
	RWtypedef  shift 52
	RWtypeid  shift 33
	RWtypeprefix  shift 34
	RWunion  shift 78
	RWvaluetype  shift 57
	.  reduce 373 (src line 2896)

	value_header  goto 55
	value_kind  goto 56
	interface_header  goto 53
	interface_kind  goto 54
	value_abs_def  goto 32
	value_def  goto 29
	value_forward_dcl  goto 30
	value_box_def  goto 31
	interface_def  goto 27
	interface_forward_dcl  goto 28
	const_dcl  goto 5
	module_dcl  goto 4
	native_dcl  goto 24
	struct_dcl  goto 46
	union_dcl  goto 47
	enum_dcl  goto 48
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	union_def  goto 69
	union_forward_dcl  goto 70
	constr_type_dcl  goto 23
	type_dcl  goto 6
	typedef_dcl  goto 25
	struct_def  goto 67
	struct_forward_dcl  goto 68
	except_dcl  goto 7
	interface_dcl  goto 8
	value_dcl  goto 9
	type_id_dcl  goto 10
	type_prefix_dcl  goto 11
	import_dcl  goto 12
	component_dcl  goto 13
	home_dcl  goto 14
	event_dcl  goto 15
	porttype_dcl  goto 16
	connector_dcl  goto 17
	template_module_dcl  goto 18
	template_module_inst  goto 19
	annotation_dcl  goto 20
	definition  goto 3
	definitionPlus  goto 2
	specification  goto 1
	component_def  goto 36
	component_forward_dcl  goto 37
	component_header  goto 59
	home_header  goto 38
	event_def  goto 39
	event_abs_def  goto 40
	event_forward_dcl  goto 41
	event_header  goto 62
	porttype_def  goto 42
	porttype_forward_dcl  goto 43
	connector_header  goto 44
	annotation_header  goto 45

state 1
	$accept:  specification.$end 

	$end  accept
	.  error


state 2
	specification:  definitionPlus.    (1)
	definitionPlus:  definitionPlus.definition 
	event_dcl: .    (373)

	Annotation  shift 66
	RWabstract  shift 58
	RWbitmask  shift 73
	RWbitset  shift 72
	RWcomponent  shift 60
	RWconnector  shift 65
	RWconst  shift 22
	RWcustom  shift 76
	RWexception  shift 26
	RWenum  shift 71
	RWeventtype  shift 63
	RWhome  shift 61
	RWimport  shift 35
	RWinterface  shift 74
	RWlocal  shift 75
	RWmodule  shift 21
	RWnative  shift 51
	RWporttype  shift 64
	RWstruct  shift 77
	RWtypedef  shift 52
	RWtypeid  shift 33
	RWtypeprefix  shift 34
	RWunion  shift 78
	RWvaluetype  shift 57
	';'  reduce 373 (src line 2896)
	.  reduce 1 (src line 306)

	value_header  goto 55
	value_kind  goto 56
	interface_header  goto 53
	interface_kind  goto 54
	value_abs_def  goto 32
	value_def  goto 29
	value_forward_dcl  goto 30
	value_box_def  goto 31
	interface_def  goto 27
	interface_forward_dcl  goto 28
	const_dcl  goto 5
	module_dcl  goto 4
	native_dcl  goto 24
	struct_dcl  goto 46
	union_dcl  goto 47
	enum_dcl  goto 48
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	union_def  goto 69
	union_forward_dcl  goto 70
	constr_type_dcl  goto 23
	type_dcl  goto 6
	typedef_dcl  goto 25
	struct_def  goto 67
	struct_forward_dcl  goto 68
	except_dcl  goto 7
	interface_dcl  goto 8
	value_dcl  goto 9
	type_id_dcl  goto 10
	type_prefix_dcl  goto 11
	import_dcl  goto 12
	component_dcl  goto 13
	home_dcl  goto 14
	event_dcl  goto 15
	porttype_dcl  goto 16
	connector_dcl  goto 17
	template_module_dcl  goto 18
	template_module_inst  goto 19
	annotation_dcl  goto 20
	definition  goto 79
	component_def  goto 36
	component_forward_dcl  goto 37
	component_header  goto 59
	home_header  goto 38
	event_def  goto 39
	event_abs_def  goto 40
	event_forward_dcl  goto 41
	event_header  goto 62
	porttype_def  goto 42
	porttype_forward_dcl  goto 43
	connector_header  goto 44
	annotation_header  goto 45

state 3
	definitionPlus:  definition.    (2)

	.  reduce 2 (src line 320)


state 4
	definition:  module_dcl.';' 

	';'  shift 80
	.  error


state 5
	definition:  const_dcl.';' 

	';'  shift 81
	.  error


state 6
	definition:  type_dcl.';' 

	';'  shift 82
	.  error


state 7
	definition:  except_dcl.';' 

	';'  shift 83
	.  error


state 8
	definition:  interface_dcl.';' 

	';'  shift 84
	.  error


state 9
	definition:  value_dcl.';' 

	';'  shift 85
	.  error


state 10
	definition:  type_id_dcl.';' 

	';'  shift 86
	.  error


state 11
	definition:  type_prefix_dcl.';' 

	';'  shift 87
	.  error


state 12
	definition:  import_dcl.';' 

	';'  shift 88
	.  error


state 13
	definition:  component_dcl.';' 

	';'  shift 89
	.  error


state 14
	definition:  home_dcl.';' 

	';'  shift 90
	.  error


state 15
	definition:  event_dcl.';' 

	';'  shift 91
	.  error


state 16
	definition:  porttype_dcl.';' 

	';'  shift 92
	.  error


state 17
	definition:  connector_dcl.';' 

	';'  shift 93
	.  error


state 18
	definition:  template_module_dcl.';' 

	';'  shift 94
	.  error


state 19
	definition:  template_module_inst.';' 

	';'  shift 95
	.  error


state 20
	definition:  annotation_dcl.';' 

	';'  shift 96
	.  error


state 21
	module_dcl:  RWmodule.identifier '{' definitionPlus '}' 
	module_dcl:  RWmodule.identifier '{' '}' 
	template_module_dcl:  RWmodule.identifier '<' formal_parameters '>' '{' tpl_definitionPlus '}' 
	template_module_inst:  RWmodule.scoped_name '<' actual_parameters '>' identifier 

	ScopeOp  shift 99
	identifier  shift 97
	.  error

	scoped_name  goto 98

state 22
	const_dcl:  RWconst.const_type identifier '=' const_expr 

	ScopeOp  shift 99
	identifier  shift 123
	RWboolean  shift 119
	RWchar  shift 117
	RWdouble  shift 114
	RWfixed  shift 116
	RWfloat  shift 113
	RWlong  shift 115
	RWoctet  shift 120
	RWshort  shift 132
	RWstring  shift 121
	RWunsigned  shift 137
	RWwchar  shift 118
	RWwstring  shift 122
	RWint8  shift 136
	RWuint8  shift 141
	RWint16  shift 133
	RWint32  shift 134
	RWint64  shift 135
	RWuint16  shift 138
	RWuint32  shift 139
	RWuint64  shift 140
	.  error

	floating_pt_type  goto 102
	integer_type  goto 101
	const_type  goto 100
	fixed_pt_const_type  goto 103
	signed_int  goto 111
	unsigned_int  goto 112
	signed_short_int  goto 124
	signed_long_int  goto 125
	signed_longlong_int  goto 126
	signed_tiny_int  goto 127
	char_type  goto 104
	wide_char_type  goto 105
	boolean_type  goto 106
	octet_type  goto 107
	string_type  goto 108
	wide_string_type  goto 109
	unsigned_short_int  goto 128
	unsigned_long_int  goto 129
	unsigned_longlong_int  goto 130
	unsigned_tiny_int  goto 131
	scoped_name  goto 110

state 23
	type_dcl:  constr_type_dcl.    (75)

	.  reduce 75 (src line 848)


state 24
	type_dcl:  native_dcl.    (76)

	.  reduce 76 (src line 853)


state 25
	type_dcl:  typedef_dcl.    (77)

	.  reduce 77 (src line 857)


state 26
	except_dcl:  RWexception.identifier '{' memberStar '}' 

	identifier  shift 142
	.  error


state 27
	interface_dcl:  interface_def.    (195)

	.  reduce 195 (src line 1720)


state 28
	interface_dcl:  interface_forward_dcl.    (196)

	.  reduce 196 (src line 1726)


state 29
	value_dcl:  value_def.    (252)

	.  reduce 252 (src line 2192)


state 30
	value_dcl:  value_forward_dcl.    (253)

	.  reduce 253 (src line 2198)


state 31
	value_dcl:  value_box_def.    (254)

	.  reduce 254 (src line 2203)


state 32
	value_dcl:  value_abs_def.    (255)

	.  reduce 255 (src line 2208)


state 33
	type_id_dcl:  RWtypeid.scoped_name string_literal 

	ScopeOp  shift 99
	identifier  shift 123
	.  error

	scoped_name  goto 143

state 34
	type_prefix_dcl:  RWtypeprefix.scoped_name string_literal 

	ScopeOp  shift 99
	identifier  shift 123
	.  error

	scoped_name  goto 144

state 35
	import_dcl:  RWimport.imported_scope 

	ScopeOp  shift 99
	string_literal  shift 147
	identifier  shift 123
	.  error

	scoped_name  goto 146
	imported_scope  goto 145

state 36
	component_dcl:  component_def.    (312)

	.  reduce 312 (src line 2594)


state 37
	component_dcl:  component_forward_dcl.    (313)

	.  reduce 313 (src line 2599)


state 38
	home_dcl:  home_header.'{' home_body '}' 

	'{'  shift 148
	.  error


state 39
	event_dcl:  event_def.    (374)

	.  reduce 374 (src line 2900)


state 40
	event_dcl:  event_abs_def.    (375)

	.  reduce 375 (src line 2904)


state 41
	event_dcl:  event_forward_dcl.    (376)

	.  reduce 376 (src line 2908)


state 42
	porttype_dcl:  porttype_def.    (386)

	.  reduce 386 (src line 2957)


state 43
	porttype_dcl:  porttype_forward_dcl.    (387)

	.  reduce 387 (src line 2962)


state 44
	connector_dcl:  connector_header.'{' connector_exportPlus '}' 

	'{'  shift 149
	.  error


state 45
	annotation_dcl:  annotation_header.'{' annotation_body '}' 

	'{'  shift 150
	.  error


state 46
	constr_type_dcl:  struct_dcl.    (133)

	.  reduce 133 (src line 1338)


state 47
	constr_type_dcl:  union_dcl.    (134)

	.  reduce 134 (src line 1343)


state 48
	constr_type_dcl:  enum_dcl.    (135)

	.  reduce 135 (src line 1347)


state 49
	constr_type_dcl:  bitset_dcl.    (136)

	.  reduce 136 (src line 1351)


state 50
	constr_type_dcl:  bitmask_dcl.    (137)

	.  reduce 137 (src line 1355)


state 51
	native_dcl:  RWnative.simple_declarator 

	identifier  shift 152
	.  error

	simple_declarator  goto 151

state 52
	typedef_dcl:  RWtypedef.type_declarator 

	ScopeOp  shift 99
	identifier  shift 123
	RWany  shift 176
	RWbitmask  shift 73
	RWbitset  shift 72
	RWboolean  shift 119
	RWchar  shift 117
	RWdouble  shift 114
	RWenum  shift 71
	RWfixed  shift 174
	RWfloat  shift 113
	RWlong  shift 115
	RWmap  shift 175
	RWObject  shift 177
	RWoctet  shift 120
	RWsequence  shift 173
	RWshort  shift 132
	RWstring  shift 121
	RWstruct  shift 77
	RWunsigned  shift 137
	RWunion  shift 78
	RWValueBase  shift 178
	RWwchar  shift 118
	RWwstring  shift 122
	RWint8  shift 136
	RWuint8  shift 141
	RWint16  shift 133
	RWint32  shift 134
	RWint64  shift 135
	RWuint16  shift 138
	RWuint32  shift 139
	RWuint64  shift 140
	.  error

	simple_type_spec  goto 154
	base_type_spec  goto 157
	template_type_spec  goto 155
	floating_pt_type  goto 165
	integer_type  goto 164
	signed_int  goto 111
	unsigned_int  goto 112
	signed_short_int  goto 124
	signed_long_int  goto 125
	signed_longlong_int  goto 126
	signed_tiny_int  goto 127
	char_type  goto 166
	wide_char_type  goto 167
	boolean_type  goto 168
	octet_type  goto 169
	any_type  goto 170
	object_type  goto 171
	value_base_type  goto 172
	sequence_type  goto 159
	string_type  goto 160
	wide_string_type  goto 161
	fixed_pt_type  goto 162
	map_type  goto 163
	unsigned_short_int  goto 128
	unsigned_long_int  goto 129
	unsigned_longlong_int  goto 130
	unsigned_tiny_int  goto 131
	struct_dcl  goto 46
	union_dcl  goto 47
	enum_dcl  goto 48
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	union_def  goto 69
	union_forward_dcl  goto 70
	type_declarator  goto 153
	constr_type_dcl  goto 156
	struct_def  goto 67
	struct_forward_dcl  goto 68
	scoped_name  goto 158

state 53
	interface_def:  interface_header.'{' interface_body '}' 

	'{'  shift 179
	.  error


state 54
	interface_forward_dcl:  interface_kind.identifier 
	interface_header:  interface_kind.identifier 
	interface_header:  interface_kind.identifier interface_inheritance_spec 

	identifier  shift 180
	.  error


state 55
	value_def:  value_header.'{' value_elementPlus '}' 

	'{'  shift 181
	.  error


state 56
	value_header:  value_kind.identifier value_inheritance_spec 
	value_header:  value_kind.identifier 
	value_forward_dcl:  value_kind.identifier 

	identifier  shift 182
	.  error


57: shift/reduce conflict (shift 183(0), red'n 259(0)) on identifier
state 57
	value_kind:  RWvaluetype.    (259)
	value_box_def:  RWvaluetype.identifier type_spec 

	identifier  shift 183
	.  error


state 58
	interface_kind:  RWabstract.RWinterface 
	value_abs_def:  RWabstract.RWvaluetype identifier 
	value_abs_def:  RWabstract.RWvaluetype identifier value_inheritance_spec '{' exportStar '}' 
	value_abs_def:  RWabstract.RWvaluetype identifier '{' exportStar '}' 
	event_forward_dcl:  RWabstract.RWeventtype identifier 
	event_abs_def:  RWabstract.RWeventtype identifier '{' exportStar '}' 
	event_abs_def:  RWabstract.RWeventtype identifier value_inheritance_spec '{' exportStar '}' 

	RWeventtype  shift 186
	RWinterface  shift 184
	RWvaluetype  shift 185
	.  error


state 59
	component_def:  component_header.'{' component_body '}' 

	'{'  shift 187
	.  error


state 60
	component_forward_dcl:  RWcomponent.identifier 
	component_header:  RWcomponent.identifier 
	component_header:  RWcomponent.identifier component_inheritance_spec 
	component_header:  RWcomponent.identifier supported_interface_spec 
	component_header:  RWcomponent.identifier component_inheritance_spec supported_interface_spec 

	identifier  shift 188
	.  error


state 61
	home_header:  RWhome.identifier RWmanages scoped_name 
	home_header:  RWhome.identifier home_inheritance_spec RWmanages scoped_name 
	home_header:  RWhome.identifier RWmanages scoped_name 
	home_header:  RWhome.identifier RWmanages scoped_name primary_key_spec 
	home_header:  RWhome.identifier supported_interface_spec RWmanages scoped_name 
	home_header:  RWhome.identifier supported_interface_spec RWmanages scoped_name primary_key_spec 
	home_header:  RWhome.identifier home_inheritance_spec RWmanages scoped_name 
	home_header:  RWhome.identifier home_inheritance_spec RWmanages scoped_name primary_key_spec 
	home_header:  RWhome.identifier home_inheritance_spec supported_interface_spec RWmanages scoped_name 
	home_header:  RWhome.identifier home_inheritance_spec supported_interface_spec RWmanages scoped_name primary_key_spec 

	identifier  shift 189
	.  error


state 62
	event_def:  event_header.'{' value_elementStar '}' 

	'{'  shift 190
	.  error


state 63
	event_forward_dcl:  RWeventtype.identifier 
	event_header:  RWeventtype.identifier 
	event_header:  RWeventtype.identifier value_inheritance_spec 

	identifier  shift 191
	.  error


state 64
	porttype_forward_dcl:  RWporttype.identifier 
	porttype_def:  RWporttype.identifier '{' port_body '}' 

	identifier  shift 192
	.  error


state 65
	connector_header:  RWconnector.identifier 
	connector_header:  RWconnector.identifier connector_inherit_spec 

	identifier  shift 193
	.  error


state 66
	annotation_header:  Annotation.identifier 

	identifier  shift 194
	.  error


state 67
	struct_dcl:  struct_def.    (138)

	.  reduce 138 (src line 1361)


state 68
	struct_dcl:  struct_forward_dcl.    (139)

	.  reduce 139 (src line 1366)


state 69
	union_dcl:  union_def.    (149)

	.  reduce 149 (src line 1441)


state 70
	union_dcl:  union_forward_dcl.    (150)

	.  reduce 150 (src line 1446)


state 71
	enum_dcl:  RWenum.identifier '{' enumerators '}' 

	identifier  shift 195
	.  error


state 72
	bitset_dcl:  RWbitset.identifier '{' bitfieldStar '}' $$437 RWbitset identifier ':' scoped_name '{' bitfieldStar '}' 

	identifier  shift 196
	.  error


state 73
	bitmask_dcl:  RWbitmask.identifier '{' bit_valueStar '}' 

	identifier  shift 197
	.  error


state 74
	interface_kind:  RWinterface.    (201)

	.  reduce 201 (src line 1805)


state 75
	interface_kind:  RWlocal.RWinterface 

	RWinterface  shift 198
	.  error


state 76
	value_kind:  RWcustom.RWvaluetype 
	event_header:  RWcustom.RWeventtype identifier 
	event_header:  RWcustom.RWeventtype identifier value_inheritance_spec 

	RWeventtype  shift 200
	RWvaluetype  shift 199
	.  error


state 77
	struct_def:  RWstruct.identifier '{' memberPlus '}' 
	struct_def:  RWstruct.identifier ':' scoped_name '{' memberStar '}' 
	struct_def:  RWstruct.identifier '{' '}' 
	struct_forward_dcl:  RWstruct.identifier 

	identifier  shift 201
	.  error


state 78
	union_def:  RWunion.identifier RWswitch '(' switch_type_spec ')' '{' switch_body '}' 
	union_forward_dcl:  RWunion.identifier 

	identifier  shift 202
	.  error


state 79
	definitionPlus:  definitionPlus definition.    (3)

	.  reduce 3 (src line 331)


state 80
	definition:  module_dcl ';'.    (4)

	.  reduce 4 (src line 337)


state 81
	definition:  const_dcl ';'.    (5)

	.  reduce 5 (src line 344)


state 82
	definition:  type_dcl ';'.    (6)

	.  reduce 6 (src line 349)


state 83
	definition:  except_dcl ';'.    (7)

	.  reduce 7 (src line 354)


state 84
	definition:  interface_dcl ';'.    (8)

	.  reduce 8 (src line 359)


state 85
	definition:  value_dcl ';'.    (9)

	.  reduce 9 (src line 364)


state 86
	definition:  type_id_dcl ';'.    (10)

	.  reduce 10 (src line 369)


state 87
	definition:  type_prefix_dcl ';'.    (11)

	.  reduce 11 (src line 374)


state 88
	definition:  import_dcl ';'.    (12)

	.  reduce 12 (src line 379)


state 89
	definition:  component_dcl ';'.    (13)

	.  reduce 13 (src line 384)


state 90
	definition:  home_dcl ';'.    (14)

	.  reduce 14 (src line 389)


state 91
	definition:  event_dcl ';'.    (15)

	.  reduce 15 (src line 394)


state 92
	definition:  porttype_dcl ';'.    (16)

	.  reduce 16 (src line 399)


state 93
	definition:  connector_dcl ';'.    (17)

	.  reduce 17 (src line 404)


state 94
	definition:  template_module_dcl ';'.    (18)

	.  reduce 18 (src line 409)


state 95
	definition:  template_module_inst ';'.    (19)

	.  reduce 19 (src line 414)


state 96
	definition:  annotation_dcl ';'.    (20)

	.  reduce 20 (src line 419)


97: shift/reduce conflict (shift 204(0), red'n 25(0)) on '<'
state 97
	module_dcl:  RWmodule identifier.'{' definitionPlus '}' 
	module_dcl:  RWmodule identifier.'{' '}' 
	scoped_name:  identifier.    (25)
	template_module_dcl:  RWmodule identifier.'<' formal_parameters '>' '{' tpl_definitionPlus '}' 

	'{'  shift 203
	'<'  shift 204
	.  reduce 25 (src line 465)


state 98
	scoped_name:  scoped_name.ScopeOp identifier 
	template_module_inst:  RWmodule scoped_name.'<' actual_parameters '>' identifier 

	ScopeOp  shift 205
	'<'  shift 206
	.  error


state 99
	scoped_name:  ScopeOp.identifier 

	identifier  shift 207
	.  error


state 100
	const_dcl:  RWconst const_type.identifier '=' const_expr 

	identifier  shift 208
	.  error


state 101
	const_type:  integer_type.    (29)

	.  reduce 29 (src line 495)


state 102
	const_type:  floating_pt_type.    (30)

	.  reduce 30 (src line 501)


state 103
	const_type:  fixed_pt_const_type.    (31)

	.  reduce 31 (src line 506)


state 104
	const_type:  char_type.    (32)

	.  reduce 32 (src line 511)


state 105
	const_type:  wide_char_type.    (33)

	.  reduce 33 (src line 516)


state 106
	const_type:  boolean_type.    (34)

	.  reduce 34 (src line 521)


state 107
	const_type:  octet_type.    (35)

	.  reduce 35 (src line 526)


state 108
	const_type:  string_type.    (36)

	.  reduce 36 (src line 531)


state 109
	const_type:  wide_string_type.    (37)

	.  reduce 37 (src line 536)


state 110
	scoped_name:  scoped_name.ScopeOp identifier 
	const_type:  scoped_name.    (38)

	ScopeOp  shift 205
	.  reduce 38 (src line 541)


state 111
	integer_type:  signed_int.    (94)

	.  reduce 94 (src line 970)


state 112
	integer_type:  unsigned_int.    (95)

	.  reduce 95 (src line 975)


state 113
	floating_pt_type:  RWfloat.    (91)

	.  reduce 91 (src line 941)


state 114
	floating_pt_type:  RWdouble.    (92)

	.  reduce 92 (src line 951)


state 115
	floating_pt_type:  RWlong.RWdouble 
	signed_long_int:  RWlong.    (102)
	signed_longlong_int:  RWlong.RWlong 

	RWdouble  shift 209
	RWlong  shift 210
	.  reduce 102 (src line 1018)


state 116
	fixed_pt_const_type:  RWfixed.    (132)

	.  reduce 132 (src line 1331)


state 117
	char_type:  RWchar.    (116)

	.  reduce 116 (src line 1154)


state 118
	wide_char_type:  RWwchar.    (117)

	.  reduce 117 (src line 1166)


state 119
	boolean_type:  RWboolean.    (118)

	.  reduce 118 (src line 1177)


state 120
	octet_type:  RWoctet.    (119)

	.  reduce 119 (src line 1189)


state 121
	string_type:  RWstring.'<' positive_int_const '>' 
	string_type:  RWstring.    (128)

	'<'  shift 211
	.  reduce 128 (src line 1274)


state 122
	wide_string_type:  RWwstring.'<' positive_int_const '>' 
	wide_string_type:  RWwstring.    (130)

	'<'  shift 212
	.  reduce 130 (src line 1300)


state 123
	scoped_name:  identifier.    (25)

	.  reduce 25 (src line 465)


state 124
	signed_int:  signed_short_int.    (96)

	.  reduce 96 (src line 981)


state 125
	signed_int:  signed_long_int.    (97)

	.  reduce 97 (src line 985)


state 126
	signed_int:  signed_longlong_int.    (98)

	.  reduce 98 (src line 988)


state 127
	signed_int:  signed_tiny_int.    (99)

	.  reduce 99 (src line 991)


state 128
	unsigned_int:  unsigned_short_int.    (106)

	.  reduce 106 (src line 1066)


state 129
	unsigned_int:  unsigned_long_int.    (107)

	.  reduce 107 (src line 1072)


state 130
	unsigned_int:  unsigned_longlong_int.    (108)

	.  reduce 108 (src line 1076)


state 131
	unsigned_int:  unsigned_tiny_int.    (109)

	.  reduce 109 (src line 1080)


state 132
	signed_short_int:  RWshort.    (100)

	.  reduce 100 (src line 995)


state 133
	signed_short_int:  RWint16.    (101)

	.  reduce 101 (src line 1006)


state 134
	signed_long_int:  RWint32.    (103)

	.  reduce 103 (src line 1030)


state 135
	signed_longlong_int:  RWint64.    (105)

	.  reduce 105 (src line 1054)


state 136
	signed_tiny_int:  RWint8.    (450)

	.  reduce 450 (src line 3087)


state 137
	unsigned_short_int:  RWunsigned.RWshort 
	unsigned_long_int:  RWunsigned.RWlong 
	unsigned_longlong_int:  RWunsigned.RWlong RWlong 

	RWlong  shift 214
	RWshort  shift 213
	.  error


state 138
	unsigned_short_int:  RWuint16.    (111)

	.  reduce 111 (src line 1096)


state 139
	unsigned_long_int:  RWuint32.    (113)

	.  reduce 113 (src line 1119)


state 140
	unsigned_longlong_int:  RWuint64.    (115)

	.  reduce 115 (src line 1142)


state 141
	unsigned_tiny_int:  RWuint8.    (451)

	.  reduce 451 (src line 3098)


state 142
	except_dcl:  RWexception identifier.'{' memberStar '}' 

	'{'  shift 215
	.  error


state 143
	scoped_name:  scoped_name.ScopeOp identifier 
	type_id_dcl:  RWtypeid scoped_name.string_literal 

	ScopeOp  shift 205
	string_literal  shift 216
	.  error


state 144
	scoped_name:  scoped_name.ScopeOp identifier 
	type_prefix_dcl:  RWtypeprefix scoped_name.string_literal 

	ScopeOp  shift 205
	string_literal  shift 217
	.  error


state 145
	import_dcl:  RWimport imported_scope.    (290)

	.  reduce 290 (src line 2465)


state 146
	scoped_name:  scoped_name.ScopeOp identifier 
	imported_scope:  scoped_name.    (291)

	ScopeOp  shift 205
	.  reduce 291 (src line 2467)


state 147
	imported_scope:  string_literal.    (292)

	.  reduce 292 (src line 2467)


148: shift/reduce conflict (shift 99(0), red'n 350(0)) on ScopeOp
148: shift/reduce conflict (shift 123(0), red'n 350(0)) on identifier
148: shift/reduce conflict (shift 176(0), red'n 350(0)) on RWany
148: shift/reduce conflict (shift 243(0), red'n 350(0)) on RWattribute
148: shift/reduce conflict (shift 73(0), red'n 350(0)) on RWbitmask
148: shift/reduce conflict (shift 72(0), red'n 350(0)) on RWbitset
148: shift/reduce conflict (shift 119(0), red'n 350(0)) on RWboolean
148: shift/reduce conflict (shift 117(0), red'n 350(0)) on RWchar
148: shift/reduce conflict (shift 22(0), red'n 350(0)) on RWconst
148: shift/reduce conflict (shift 114(0), red'n 350(0)) on RWdouble
148: shift/reduce conflict (shift 26(0), red'n 350(0)) on RWexception
148: shift/reduce conflict (shift 71(0), red'n 350(0)) on RWenum
148: shift/reduce conflict (shift 234(0), red'n 350(0)) on RWfactory
148: shift/reduce conflict (shift 235(0), red'n 350(0)) on RWfinder
148: shift/reduce conflict (shift 174(0), red'n 350(0)) on RWfixed
148: shift/reduce conflict (shift 113(0), red'n 350(0)) on RWfloat
148: shift/reduce conflict (shift 35(0), red'n 350(0)) on RWimport
148: shift/reduce conflict (shift 115(0), red'n 350(0)) on RWlong
148: shift/reduce conflict (shift 175(0), red'n 350(0)) on RWmap
148: shift/reduce conflict (shift 51(0), red'n 350(0)) on RWnative
148: shift/reduce conflict (shift 177(0), red'n 350(0)) on RWObject
148: shift/reduce conflict (shift 120(0), red'n 350(0)) on RWoctet
148: shift/reduce conflict (shift 239(0), red'n 350(0)) on RWoneway
148: shift/reduce conflict (shift 242(0), red'n 350(0)) on RWreadonly
148: shift/reduce conflict (shift 173(0), red'n 350(0)) on RWsequence
148: shift/reduce conflict (shift 132(0), red'n 350(0)) on RWshort
148: shift/reduce conflict (shift 121(0), red'n 350(0)) on RWstring
148: shift/reduce conflict (shift 77(0), red'n 350(0)) on RWstruct
148: shift/reduce conflict (shift 52(0), red'n 350(0)) on RWtypedef
148: shift/reduce conflict (shift 33(0), red'n 350(0)) on RWtypeid
148: shift/reduce conflict (shift 34(0), red'n 350(0)) on RWtypeprefix
148: shift/reduce conflict (shift 137(0), red'n 350(0)) on RWunsigned
148: shift/reduce conflict (shift 78(0), red'n 350(0)) on RWunion
148: shift/reduce conflict (shift 178(0), red'n 350(0)) on RWValueBase
148: shift/reduce conflict (shift 241(0), red'n 350(0)) on RWvoid
148: shift/reduce conflict (shift 118(0), red'n 350(0)) on RWwchar
148: shift/reduce conflict (shift 122(0), red'n 350(0)) on RWwstring
148: shift/reduce conflict (shift 136(0), red'n 350(0)) on RWint8
148: shift/reduce conflict (shift 141(0), red'n 350(0)) on RWuint8
148: shift/reduce conflict (shift 133(0), red'n 350(0)) on RWint16
148: shift/reduce conflict (shift 134(0), red'n 350(0)) on RWint32
148: shift/reduce conflict (shift 135(0), red'n 350(0)) on RWint64
148: shift/reduce conflict (shift 138(0), red'n 350(0)) on RWuint16
148: shift/reduce conflict (shift 139(0), red'n 350(0)) on RWuint32
148: shift/reduce conflict (shift 140(0), red'n 350(0)) on RWuint64
state 148
	home_dcl:  home_header '{'.home_body '}' 
	home_exportStar: .    (350)

	ScopeOp  shift 99
	identifier  shift 123
	RWany  shift 176
	RWattribute  shift 243
	RWbitmask  shift 73
	RWbitset  shift 72
	RWboolean  shift 119
	RWchar  shift 117
	RWconst  shift 22
	RWdouble  shift 114
	RWexception  shift 26
	RWenum  shift 71
	RWfactory  shift 234
	RWfinder  shift 235
	RWfixed  shift 174
	RWfloat  shift 113
	RWimport  shift 35
	RWlong  shift 115
	RWmap  shift 175
	RWnative  shift 51
	RWObject  shift 177
	RWoctet  shift 120
	RWoneway  shift 239
	RWreadonly  shift 242
	RWsequence  shift 173
	RWshort  shift 132
	RWstring  shift 121
	RWstruct  shift 77
	RWtypedef  shift 52
	RWtypeid  shift 33
	RWtypeprefix  shift 34
	RWunsigned  shift 137
	RWunion  shift 78
	RWValueBase  shift 178
	RWvoid  shift 241
	RWwchar  shift 118
	RWwstring  shift 122
	RWint8  shift 136
	RWuint8  shift 141
	RWint16  shift 133
	RWint32  shift 134
	RWint64  shift 135
	RWuint16  shift 138
	RWuint32  shift 139
	RWuint64  shift 140
	.  reduce 350 (src line 2781)

	op_dcl  goto 224
	attr_dcl  goto 225
	op_oneway_dcl  goto 232
	op_with_context  goto 233
	readonly_attr_spec  goto 237
	attr_spec  goto 238
	type_spec  goto 240
	op_type_spec  goto 236
	simple_type_spec  goto 244
	base_type_spec  goto 157
	template_type_spec  goto 245
	floating_pt_type  goto 165
	integer_type  goto 164
	signed_int  goto 111
	unsigned_int  goto 112
	signed_short_int  goto 124
	signed_long_int  goto 125
	signed_longlong_int  goto 126
	signed_tiny_int  goto 127
	char_type  goto 166
	wide_char_type  goto 167
	boolean_type  goto 168
	octet_type  goto 169
	any_type  goto 170
	object_type  goto 171
	value_base_type  goto 172
	sequence_type  goto 159
	string_type  goto 160
	wide_string_type  goto 161
	fixed_pt_type  goto 162
	map_type  goto 163
	unsigned_short_int  goto 128
	unsigned_long_int  goto 129
	unsigned_longlong_int  goto 130
	unsigned_tiny_int  goto 131
	const_dcl  goto 227
	native_dcl  goto 24
	struct_dcl  goto 46
	union_dcl  goto 47
	enum_dcl  goto 48
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	union_def  goto 69
	union_forward_dcl  goto 70
	constr_type_dcl  goto 23
	type_dcl  goto 226
	typedef_dcl  goto 25
	struct_def  goto 67
	struct_forward_dcl  goto 68
	except_dcl  goto 228
	type_id_dcl  goto 229
	type_prefix_dcl  goto 230
	import_dcl  goto 231
	scoped_name  goto 158
	export  goto 221
	home_body  goto 218
	home_exportStar  goto 219
	home_export  goto 220
	factory_dcl  goto 222
	finder_dcl  goto 223

state 149
	connector_dcl:  connector_header '{'.connector_exportPlus '}' 
	connector_exportPlus: .    (403)

	.  reduce 403 (src line 3018)

	connector_exportPlus  goto 246

state 150
	annotation_dcl:  annotation_header '{'.annotation_body '}' 
	annotation_bodyEntryStar: .    (458)

	.  reduce 458 (src line 3121)

	annotation_body  goto 247
	annotation_bodyEntryStar  goto 248

state 151
	native_dcl:  RWnative simple_declarator.    (175)

	.  reduce 175 (src line 1555)


state 152
	simple_declarator:  identifier.    (178)

	.  reduce 178 (src line 1576)


state 153
	typedef_dcl:  RWtypedef type_declarator.    (179)

	.  reduce 179 (src line 1582)


state 154
	type_declarator:  simple_type_spec.any_declarators 

	identifier  shift 152
	.  error

	array_declarator  goto 253
	any_declarators  goto 249
	any_declaratorsPlus  goto 250
	any_declarator  goto 251
	simple_declarator  goto 252
